# IoT-solution-creator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: __init__.py  base_agent.py  cloud_agent.py  connectivity_agent.py  data_agent.py  deployment_agent.py  hardware_agent.py  methodology_agent.py  requirements_agent.py  security_agent.py
bus/: __init__.py  message.py  message_bus.py
examples/: industrial_monitoring.py  smart_building.py  smart_irrigation.py
models/: __init__.py  problem.py  solution.py
orchestrator/: __init__.py  __main__.py  assembler.py  orchestrator.py  planner.py
prompts/: cloud_agent.md  connectivity_agent.md  data_agent.md  deployment_agent.md  hardware_agent.md  methodology_agent.md  requirements_agent.md  security_agent.md
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_orchestrator.py
tests/unit/agents/: test_agents.py
tools/: llm_client.py  report_renderer.py
