[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-solution-creator"
version = "0.1.0"
description = "Multi-agent system that designs complete IoT solutions end-to-end"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
iot-creator = "orchestrator.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "bus*", "models*", "orchestrator*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agents", "orchestrator"]
omit = ["tests/*"]
